assets/css/unminified/style-rtl.css
/* ... */
.main-header-bar-navigation {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -moz-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.header-main-layout-1 .ast-main-header-bar-alignment {
  margin-right: auto;
}

.header-main-layout-3 .ast-main-header-bar-alignment {
  margin-left: auto;
}

#site-navigation {
  height: 100%;
}

/* Responsive Screen */
.ast-header-break-point .user-select {
  clear: both;
}

.ast-header-break-point .ast-mobile-menu-buttons {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.ast-header-break-point .main-header-bar-navigation {
  -webkit-box-flex: 1;
  -webkit-flex: auto;
  -moz-box-flex: 1;
  -ms-flex: auto;
  flex: auto;
}

.ast-header-break-point .ast-main-header-bar-alignment {
  display: block;
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex: auto;
  -moz-box-flex: 1;
  -ms-flex: auto;
  flex: auto;
  -webkit-box-ordinal-group: 5;
  -webkit-order: 4;
  -moz-box-ordinal-group: 5;
  -ms-flex-order: 4;
  order: 4;
}

/**
 * Post/Page Navigation
 */
.site-main .comment-navigation, .site-main
.posts-navigation, .site-main
.post-navigation {
  margin: 0 0 1.5em;
  overflow: hidden;
}

.comment-navigation .nav-previous,
.comment-navigation .nav-next,
.posts-navigation .nav-previous,
.posts-navigation .nav-next,
.post-navigation .nav-previous,
.post-navigation .nav-next {
  width: 50%;
  display: inline-block;
}

.comment-navigation .nav-next,
.posts-navigation .nav-next,
.post-navigation .nav-next {
  text-align: left;
}

/*----------  Header  ----------*/
/**
 * 	Header
 *
 * @import
 * 1 - Header Layouts
 * 3 - Header Layout Common
 * 4 - Header Main
 * 5 - Header Top Bar
 * 7 - Header Toggle Buttons
*/
/* 1 - Header Layouts  */
/**
 * 	Header Layouts
 *
 * @import
 * 1 - Header Layout 1
 * 2 - Header Layout 2
 * 3 - Header Layout 3
 * 4 - Header Inline Logo & Site Title 
 * 5 - Next Button Menu Item
 * 6 - Responsive Style
*/
/* 4 - Next Button Menu Item */
.main-header-bar {
  z-index: 1;
}

/**
 * 1 - Header Layout 1
*/
.header-main-layout-1.ast-primary-menu-disabled .ast-masthead-custom-menu-items {
  text-align: left;
}

.header-main-layout-1 .main-header-bar-navigation {
  text-align: left;
}

.header-main-layout-1 .main-header-bar-navigation .sub-menu,
.header-main-layout-1 .main-header-bar-navigation .children {
  text-align: right;
}

.header-main-layout-1 .main-navigation {
  padding-right: 15px;
  vertical-align: top;
}

/**
 * 2 - Header Layout 2
*/
.header-main-layout-2 .main-header-container {
  display: block;
}

.header-main-layout-2 .site-branding {
  text-align: center;
  padding-bottom: 1em;
}

.header-main-layout-2 .site-title {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -moz-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.header-main-layout-2 .main-navigation ul {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -moz-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.header-main-layout-2 .main-header-bar-navigation {
  text-align: center;
}

.header-main-layout-2 .main-header-bar-navigation .sub-menu,
.header-main-layout-2 .main-header-bar-navigation .children {
  text-align: right;
}

.header-main-layout-2 .ast-header-custom-item {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -moz-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.85714285714286;
}

.header-main-layout-2 .ast-masthead-custom-menu-items {
  position: relative;
}

.header-main-layout-2 .widget {
  text-align: center;
}

.ast-header-custom-item-outside .header-main-layout-2 .main-header-container {
  -js-display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -moz-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.ast-header-custom-item-outside .header-main-layout-2 .site-branding {
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 100%;
  -moz-box-flex: 0;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

/**
 *  3 - Header Layout 3
*/
.header-main-layout-3 .ast-site-identity {
  text-align: left;
}

.header-main-layout-3 .main-header-container {
  -webkit-box-orient: horizontal;
  -webkit-box-direction: reverse;
  -webkit-flex-direction: row-reverse;
  -moz-box-orient: horizontal;
  -moz-box-direction: reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.header-main-layout-3 .main-navigation {
  padding-left: 15px;
}

.header-main-layout-3 .main-navigation ul {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -moz-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.header-main-layout-3 .main-header-bar-navigation {
  text-align: right;
}

.header-main-layout-3 .ast-header-custom-item {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -moz-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.header-main-layout-3 .ast-masthead-custom-menu-items {
  position: relative;
}

.header-main-layout-3 li .ast-search-icon {
  padding-right: .5em;
}

.header-main-layout-3 .ast-search-menu-icon {
  right: 0;
  left: 0;
}

.header-main-layout-3 li .ast-search-menu-icon {
  right: 1em;
  left: 0;
}

.header-main-layout-3 .main-header-bar .ast-search-menu-icon form {
  padding: 0 3em 0 0;
}

.header-main-layout-3 .main-header-bar .ast-search-menu-icon.slide-search form {
  right: -1em;
  left: auto;
}

.ast-header-break-point .header-main-layout-1 .site-branding {
  padding-left: 1em;
}

.ast-header-break-point .header-main-layout-1 .main-header-bar-navigation {
  text-align: right;
}

.ast-header-break-point .header-main-layout-1 .main-navigation {
  padding-right: 0;
}
/* ... */

